Opened 15 years ago

Closed 12 years ago

Last modified 12 years ago

#254 closed defect (fixed)

mpeg2video encoded in interlaced/field mode decodes incorrectly (demuxer)

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: mpegts mpeg2video vdpau
Cc: nfxjfg@googlemail.com Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

the file (from ticket #186) decodes incorrectly with ffmpeg

(plays fine with xine and mplayer -demuxer mpegts)

C:\>ffmpeg -i t.mpg
ffmpeg version git-N-30344-g5501afa, Copyright (c) 2000-2011 the FFmpeg develope
rs
  built on May 27 2011 22:37:57 with gcc 4.5.3
  configuration: --enable-gpl --enable-version3 --enable-memalign-hack --enable-
runtime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libo
pencore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --
enable-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger
 --enable-libspeex --enable-libtheora --enable-libvorbis --enable-libvpx --enabl
e-libx264 --enable-libxavs --enable-libxvid --enable-zlib --pkg-config=pkg-confi
g
  libavutil    51.  2. 2 / 51.  2. 2
  libavcodec   53.  6. 0 / 53.  6. 0
  libavformat  53.  2. 0 / 53.  2. 0
  libavdevice  53.  0. 0 / 53.  0. 0
  libavfilter   2. 11. 0 /  2. 11. 0
  libswscale    0. 14. 0 /  0. 14. 0
  libpostproc  51.  2. 0 / 51.  2. 0
[mp3 @ 02350BA0] Header missing
[mpeg2video @ 023507A0] allocate dummy last picture for field based first keyfra
me
[mpeg2video @ 023507A0] invalid cbp at 21 0
[mpeg2video @ 023507A0] invalid cbp at 17 10
[mpeg2video @ 023507A0] ac-tex damaged at 12 6
[mpeg2video @ 023507A0] mb incr damaged
    Last message repeated 1 times
[mpeg2video @ 023507A0] invalid cbp at 18 12
[mpeg2video @ 023507A0] ac-tex damaged at 13 12
[mpeg2video @ 023507A0] ac-tex damaged at 12 14
[mpeg2video @ 023507A0] invalid cbp at 12 16
[mpegts @ 023502A0] max_analyze_duration 5000000 reached at 5015467

Seems stream 0 codec frame rate differs from container frame rate: 50.00 (50/1)
-> 50.00 (50/1)
Input #0, mpegts, from 't.mpg':
  Duration: 00:00:14.01, start: 0.086122, bitrate: 770 kb/s
  Program 1
    Stream #0.0[0x12d]: Video: mpeg2video (Main), yuv420p, 352x288 [PAR 12:11 DA
R 4:3], 500 kb/s, 25 fps, 50 tbr, 90k tbn, 50 tbc
    Stream #0.1[0x12e]: Audio: mp3, 44100 Hz, mono, s16, 128 kb/s
At least one output file must be specified

Change History (12)

comment:1 by Carl Eugen Hoyos, 15 years ago

Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Also fails now with mplayer -demuxer mpegts -vc ffmpeg12 (the default) and vdpau (both used to work), works fine with mplayer -demuxer mpegts -vc mpeg12

mplayer t.mpg -vc mpeg12
MPlayer SVN-r33538-4.5.3 (C) 2000-2011 MPlayer Team

Playing t.mpg.
TS file format detected.
TS_PARSE: COULDN'T SYNC
VIDEO MPEG2(pid=301) AUDIO MPA(pid=302) NO SUBS (yet)!  PROGRAM N. 1
VIDEO:  MPEG2  352x288  (aspect 2)  25.000 fps  500.0 kbps (62.5 kbyte/s)
Load subtitles in ./
==========================================================================
Forced video codec: mpeg12
Opening video decoder: [libmpeg2] libmpeg2 MPEG 1/2 Video decoder
Selected video codec: [mpeg12] vfm: libmpeg2 (MPEG-1 or 2 (libmpeg2))
==========================================================================
==========================================================================
Requested audio codec family [mpg123] (afm=mpg123) not available.
Enable it at compilation.
Opening audio decoder: [ffmpeg] FFmpeg/libavcodec audio decoders
[mp2float @ 0xd7cfa0]Header missing
AUDIO: 44100 Hz, 1 ch, floatle, 128.0 kbit/9.07% (ratio: 16000->176400)
Selected audio codec: [ffmp2float] afm: ffmpeg (FFmpeg MPEG layer-1 and layer-2 audio)
==========================================================================
AO: [alsa] 48000Hz 1ch floatle (4 bytes per sample)
Starting playback...
Movie-Aspect is 1.33:1 - prescaling to correct movie aspect.
VO: [vdpau] 352x288 => 384x288 Planar YV12
A:   1.2 V:   1.2 A-V:  0.003 ct: -0.009  29/ 58 12%  3%  0.4% 5 0

Exiting... (Quit)

in reply to:  1 comment:2 by Michael Niedermayer, 15 years ago

Replying to cehoyos:

Also fails now with mplayer -demuxer mpegts -vc ffmpeg12 (the default) and vdpau (both used to work), works fine with mplayer -demuxer mpegts -vc mpeg12

what caused that regression in mplayer+ffmpeg12 ?

comment:3 by Carl Eugen Hoyos, 15 years ago

Component: undeterminedavcodec

My last comment was wrong, it still works fine with mplayer -vc ffmpeg12vdpau, never worked - afaict - with mplayer -vc ffmpeg12.

comment:4 by Carl Eugen Hoyos, 15 years ago

Keywords: ts mpeg2video added

comment:5 by Carl Eugen Hoyos, 14 years ago

Keywords: mpegts added; ts removed

comment:6 by Michael Niedermayer, 13 years ago

Resolution: fixed
Status: openclosed

comment:7 by Carl Eugen Hoyos, 13 years ago

Keywords: vdpau added

Still fails with "mplayer -demuxer lavf -vc ffmpeg12vdpau t.mpg" (strong black artefacts).

comment:8 by gjdfgh, 12 years ago

Resolution: fixed
Status: closedreopened

comment:9 by gjdfgh, 12 years ago

Cc: nfxjfg@googlemail.com added

So apparently this is the same as #3688 and #2915, and it's still broken.

comment:10 by Carl Eugen Hoyos, 12 years ago

Resolution: fixed
Status: reopenedclosed

This was an issue with the software decoder that was fixed by Michael, the demuxer issue that I described here first is covered by your ticket #2915.

comment:11 by jyavenard, 12 years ago

I never had issue using the software decoder, quite the opposite. Only with VDPAU.

So why mark #3688 as a duplicate of #254, if #254 is closed... obviously not the same bug

I can still reproduce the issue today with FFmpeg 2.2.

Unless #3688 is a duplicate of #2915 (which appears to be related)

in reply to:  11 comment:12 by Carl Eugen Hoyos, 12 years ago

Replying to jyavenard:

I never had issue using the software decoder, quite the opposite.

The exact same issues as described in this ticket are reproducible with the sample you provided.

So why mark #3688 as a duplicate of #254, if #254 is closed... obviously not the same bug

I intended to mark #3688 as a duplicate of ticket #2915 but wanted to link to this ticket which also contains a description of the same problem. Sorry if I was unclear, I am not a native speaker.

Note: See TracTickets for help on using tickets.