mpeg12: fix frame_pred_frame_dct handling in field pictures

Fixes Ticket254

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>